# rust-analyzer

./: .gitattributes  .gitignore  .travis.yml  .typos.toml  CLAUDE.md  Cargo.toml  Dockerfile  PR_TEMPLATE.md  README.md  build.sh  build_gunzip_chmod.sh  clippy.toml  crates.js  deny.toml  help.html  note_for_AE.md  rust-version  rustfmt.toml  search-index.js  settings.html  src-files.js  submit-pr.sh  triagebot.toml  verus_analyzer_dev_guide.md  verus_syntax_update.md
crates/base-db/: Cargo.toml
crates/base-db/src/: change.rs  editioned_file_id.rs  fixture.rs  input.rs  lib.rs  new_db.rs
crates/fluent-build/: Cargo.toml
crates/fluent-build/src/: error.rs  lib.rs
crates/fluent-files/: .gitignore  Cargo.toml  build.rs
crates/fluent-files/src/: await_outside_of_async.ftl  lib.rs
crates/proc-macro-srv/: Cargo.toml  build.rs
crates/proc-macro-srv/proc-macro-test/: Cargo.toml  build.rs
crates/proc-macro-srv/src/: dylib.rs  lib.rs  proc_macros.rs  server_impl.rs  token_stream.rs
crates/proc-macro-srv/src/dylib/: version.rs
crates/proc-macro-srv/src/server_impl/: rust_analyzer_span.rs  token_id.rs  token_stream.rs
crates/proc-macro-srv/src/tests/: mod.rs  utils.rs
crates/ra_assists/: Cargo.toml
crates/ra_assists/src/: add_explicit_type.rs  add_impl.rs  add_missing_impl_members.rs  add_new.rs  assist_context.rs  assist_ctx.rs  ast_editor.rs  ast_transform.rs  auto_import.rs  change_visibility.rs  fill_match_arms.rs  fill_struct_fields.rs  flip_binexpr.rs  flip_comma.rs  introduce_variable.rs  lib.rs  merge_match_arms.rs  move_guard.rs  remove_dbg.rs  split_import.rs  tests.rs  utils.rs
crates/ra_assists/src/assists/: add_derive.rs  add_explicit_type.rs  add_impl.rs  add_import.rs  add_missing_impl_members.rs  add_new.rs  change_visibility.rs  fill_match_arms.rs  flip_trait_bound.rs  move_bounds.rs
crates/ra_assists/src/handlers/: add_missing_impl_members.rs  auto_import.rs  extract_struct_from_enum_variant.rs  fill_match_arms.rs  number_representation.rs  reorder_fields.rs  replace_if_let_with_match.rs  replace_qualified_name_with_use.rs  surround_with_block.rs  unwrap_block.rs
crates/ra_assists/src/tests/: generated.rs
crates/ra_assists/src/utils/: insert_use.rs
crates/ra_cfg/: Cargo.toml
crates/ra_cfg/src/: lib.rs
crates/ra_db/: Cargo.toml
crates/ra_db/src/: cancelation.rs  fixture.rs  input.rs  lib.rs  mock.rs  tree_cache.rs
crates/ra_hir_def/: Cargo.toml
crates/ra_hir_def/src/: adt.rs  body.rs  data.rs  db.rs  expr.rs  generics.rs  import_map.rs  item_scope.rs  item_tree.rs  lib.rs  nameres.rs  path.rs  per_ns.rs  resolver.rs  src.rs  type_ref.rs  visibility.rs
crates/ra_hir_def/src/body/: lower.rs  scope.rs  source_map.rs
crates/ra_hir_def/src/item_tree/: lower.rs  tests.rs
crates/ra_hir_def/src/nameres/: collector.rs  macro_resolution.rs  raw.rs  tests.rs
crates/ra_hir_expand/: Cargo.toml  build.rs  known_names.rs
crates/ra_hir_expand/src/: builtin_macro.rs  eager.rs  hygiene.rs  lib.rs  name.rs  proc_macro.rs  util.rs
crates/ra_hir_ty/: Cargo.toml
crates/ra_hir_ty/src/: _match.rs  db.rs  display.rs  expr.rs  infer.rs  lib.rs  lower.rs  method_resolution.rs  tests.rs  traits.rs
crates/ra_hir_ty/src/diagnostics/: match_check.rs
crates/ra_hir_ty/src/infer/: expr.rs  pat.rs  unify.rs
crates/ra_hir_ty/src/tests/: macros.rs  regression.rs  traits.rs
crates/ra_hir_ty/src/traits/: builtin.rs  chalk.rs
crates/ra_ide/: Cargo.toml
crates/ra_ide/src/: call_hierarchy.rs  call_info.rs  diagnostics.rs  display.rs  expand_macro.rs  extend_selection.rs  folding_ranges.rs  goto_definition.rs  hover.rs  impls.rs  inlay_hints.rs  join_lines.rs  lib.rs  mock_analysis.rs  parent_module.rs  prime_caches.rs  references.rs  runnables.rs  ssr.rs  syntax_highlighting.rs  test_utils.rs  typing.rs
crates/ra_ide/src/completion/: complete_attribute.rs  complete_dot.rs  complete_keyword.rs  complete_pattern.rs  complete_postfix.rs  complete_qualified_path.rs  complete_scope.rs  complete_snippet.rs  complete_unqualified_path.rs  completion_context.rs  completion_item.rs  presentation.rs  test_utils.rs
crates/ra_ide/src/display/: function_signature.rs  navigation_target.rs  structure.rs
crates/ra_ide/src/references/: name_definition.rs  rename.rs
crates/ra_ide/src/snapshots/: highlight_strings.html  highlighting.html  rainbow_highlighting.html
crates/ra_ide/src/syntax_highlighting/: tags.rs  tests.rs
crates/ra_ide/src/typing/: on_enter.rs
crates/ra_ide/test_data/: rainbow_highlighting.html
crates/ra_proc_macro_srv/: Cargo.toml
crates/ra_proc_macro_srv/src/: dylib.rs  lib.rs  main.rs  rustc_server.rs
crates/ra_proc_macro_srv/src/proc_macro/: diagnostic.rs  mod.rs
crates/ra_proc_macro_srv/src/tests/: mod.rs  utils.rs
crates/ra_project_model/: Cargo.toml
crates/ra_project_model/src/: cargo_workspace.rs  json_project.rs  lib.rs  project_json.rs  sysroot.rs
crates/rust-analyzer/: Cargo.toml  build.rs
crates/rust-analyzer/src/: capabilities.rs  caps.rs  cli.rs  command.rs  config.rs  conv.rs  diagnostics.rs  discover.rs  dispatch.rs  flycheck.rs  from_proto.rs  git_lock.rs  global_state.rs  handlers.rs  integrated_benchmarks.rs  lib.rs  line_index.rs  lsp_ext.rs  lsp_utils.rs  main_loop.rs  markdown.rs  priming_scope.rs  reload.rs  semantic_tokens.rs  target_spec.rs  task_pool.rs  test_runner.rs  to_proto.rs  verus_interaction.rs  world.rs
crates/rust-analyzer/src/cli/: analysis_bench.rs  analysis_stats.rs  create_json.rs  diagnostics.rs  flags.rs  highlight.rs  integrity.rs  json_change.rs  load_cargo.rs  lsif.rs  prime_caches.rs  run_tests.rs  rustc_tests.rs  scip.rs  ssr.rs  symbols.rs  unresolved_references.rs
crates/rust-analyzer/src/config/: patch_old_style.rs  tree.rs
crates/toml-sema/: Cargo.toml
crates/toml-sema/src/: lib.rs
crates/va-test/: Cargo.toml
crates/va-test/src/: main.rs
crates/vfs/: Cargo.toml
crates/vfs/src/: anchored_path.rs  file_set.rs  lib.rs  loader.rs  path_interner.rs  vfs_path.rs
lib/paths/: Cargo.toml
lib/paths/src/: lib.rs
website/src/wasm-demo/: Cargo.toml
(+48083 files in other folders)
