[package]
edition = "2018"
name = "ra_assists"
version = "0.1.0"
authors = ["rust-analyzer developers"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
rustc-hash = "1.1.0"
itertools = "0.9.0"
either = "1.5.3"

stdx = { path = "../stdx", version = "0.1.0" }

ra_syntax = { path = "../ra_syntax", version = "0.1.0" }
text_edit = { path = "../text_edit", version = "0.1.0" }
fmt = { path = "../fmt", version = "0.1.0" }
ra_prof = { path = "../ra_prof", version = "0.1.0" }
ra_db = { path = "../ra_db", version = "0.1.0" }
ra_ide_db = { path = "../ra_ide_db", version = "0.1.0" }
hir = { path = "../ra_hir", version = "0.1.0", package = "ra_hir" }
test_utils = { path = "../test_utils", version = "0.1.0" }
