[package]
edition = "2018"
name = "ra_cfg"
version = "0.1.0"
authors = ["rust-analyzer developers"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
rustc-hash = "1.1.0"

ra_syntax = { path = "../ra_syntax", version = "0.1.0" }
tt = { path = "../tt", version = "0.1.0" }

[dev-dependencies]
mbe = { path = "../mbe" }
