[package]
edition = "2018"
name = "ra_db"
version = "0.1.0"
authors = ["rust-analyzer developers"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
salsa = "0.15.2"
rustc-hash = "1.1.0"

ra_syntax = { path = "../ra_syntax", version = "0.1.0" }
ra_cfg = { path = "../ra_cfg", version = "0.1.0" }
ra_prof = { path = "../ra_prof", version = "0.1.0" }
tt = { path = "../tt", version = "0.1.0" }
test_utils = { path = "../test_utils", version = "0.1.0" }
vfs = { path = "../vfs", version = "0.1.0" }
stdx = { path = "../stdx", version = "0.1.0" }
