[package]
edition = "2018"
name = "ra_hir_def"
version = "0.1.0"
authors = ["rust-analyzer developers"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
log = "0.4.8"
once_cell = "1.3.1"
rustc-hash = "1.1.0"
either = "1.5.3"
anymap = "0.12.1"
drop_bomb = "0.1.4"
fst = { version = "0.4", default-features = false }
itertools = "0.9.0"
indexmap = "1.4.0"
smallvec = "1.4.0"

stdx = { path = "../stdx", version = "0.1.0" }

ra_arena = { path = "../ra_arena", version = "0.1.0" }
ra_db = { path = "../ra_db", version = "0.1.0" }
ra_syntax = { path = "../ra_syntax", version = "0.1.0" }
ra_prof = { path = "../ra_prof", version = "0.1.0" }
hir_expand = { path = "../ra_hir_expand", version = "0.1.0", package = "ra_hir_expand" }
test_utils = { path = "../test_utils", version = "0.1.0" }
mbe = { path = "../ra_mbe", version = "0.1.0", package = "ra_mbe" }
ra_cfg = { path = "../ra_cfg", version = "0.1.0" }
tt = { path = "../tt", version = "0.1.0" }

[dev-dependencies]
expect = { path = "../expect" }
