[package]
edition = "2018"
name = "ra_hir_expand"
version = "0.1.0"
authors = ["rust-analyzer developers"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
log = "0.4.8"
either = "1.5.3"
rustc-hash = "1.0.0"

ra_arena = { path = "../ra_arena", version = "0.1.0" }
ra_db = { path = "../ra_db", version = "0.1.0" }
ra_syntax = { path = "../ra_syntax", version = "0.1.0" }
ra_parser = { path = "../ra_parser", version = "0.1.0" }
ra_prof = { path = "../ra_prof", version = "0.1.0" }
tt = { path = "../tt", version = "0.1.0" }
mbe = { path = "../ra_mbe", version = "0.1.0", package = "ra_mbe" }
test_utils = { path = "../test_utils", version = "0.1.0" }
