[package]
edition = "2018"
name = "ra_hir_ty"
version = "0.1.0"
authors = ["rust-analyzer developers"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
itertools = "0.9.0"
arrayvec = "0.5.1"
smallvec = "1.2.0"
ena = "0.14.0"
log = "0.4.8"
rustc-hash = "1.1.0"

stdx = { path = "../stdx", version = "0.1.0" }

hir_def = { path = "../ra_hir_def", version = "0.1.0", package = "ra_hir_def" }
hir_expand = { path = "../ra_hir_expand", version = "0.1.0", package = "ra_hir_expand" }
arena = { path = "../arena", version = "0.1.0" }
ra_db = { path = "../ra_db", version = "0.1.0" }
ra_prof = { path = "../ra_prof", version = "0.1.0" }
ra_syntax = { path = "../ra_syntax", version = "0.1.0" }
test_utils = { path = "../test_utils", version = "0.1.0" }

scoped-tls = "1"

chalk-solve = { version = "0.21.0" }
chalk-ir = { version = "0.21.0" }
chalk-recursive = { version = "0.21.0" }

[dev-dependencies]
expect = { path = "../expect" }

tracing = "0.1"
tracing-subscriber = { version = "0.2", default-features = false, features = ["env-filter", "registry"] }
tracing-tree = { version = "0.1.4" }
