[package]
edition = "2018"
name = "ra_ide"
version = "0.1.0"
authors = ["rust-analyzer developers"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[features]
wasm = []

[dependencies]
either = "1.5.3"
indexmap = "1.3.2"
itertools = "0.9.0"
log = "0.4.8"
rustc-hash = "1.1.0"
oorandom = "11.1.2"

stdx = { path = "../stdx", version = "0.1.0" }

ra_syntax = { path = "../ra_syntax", version = "0.1.0" }
text_edit = { path = "../text_edit", version = "0.1.0" }
ra_db = { path = "../ra_db", version = "0.1.0" }
ra_ide_db = { path = "../ra_ide_db", version = "0.1.0" }
ra_cfg = { path = "../ra_cfg", version = "0.1.0" }
fmt = { path = "../fmt", version = "0.1.0" }
ra_prof = { path = "../ra_prof", version = "0.1.0" }
test_utils = { path = "../test_utils", version = "0.1.0" }
ra_assists = { path = "../ra_assists", version = "0.1.0" }
ra_ssr = { path = "../ra_ssr", version = "0.1.0" }

# ra_ide should depend only on the top-level `hir` package. if you need
# something from some `hir_xxx` subpackage, reexport the API via `hir`.
hir = { path = "../ra_hir", version = "0.1.0", package = "ra_hir" }

[dev-dependencies]
expect = { path = "../expect" }
