[package]
edition = "2018"
name = "ra_proc_macro_srv"
version = "0.1.0"
authors = ["rust-analyzer developers"]
publish = false

[lib]
doctest = false

[dependencies]
ra_tt = { path = "../ra_tt" }
ra_mbe = { path = "../ra_mbe" }
ra_proc_macro = { path = "../ra_proc_macro" }
object = { version = "0.18", default-features = false, features = ["elf", "macho", "pe", "read_core", "std"] }
libloading = "0.6.0"
memmap = "0.7"
test_utils = { path = "../test_utils" }

[dev-dependencies]
cargo_metadata = "0.9.1"
difference = "2.0.0"
# used as proc macro test target
serde_derive = "=1.0.106"
