[package]
edition = "2018"
name = "ra_proc_macro_srv"
version = "0.1.0"
authors = ["rust-analyzer developers"]
publish = false
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
tt = { path = "../tt", version = "0.1.0" }
mbe = { path = "../mbe", version = "0.1.0" }
ra_proc_macro = { path = "../ra_proc_macro", version = "0.1.0" }
goblin = "0.2.1"
libloading = "0.6.0"
memmap = "0.7"
test_utils = { path = "../test_utils", version = "0.1.0" }

[dev-dependencies]
cargo_metadata = "0.11.1"
difference = "2.0.0"
# used as proc macro test target
serde_derive = "1.0.106"
toolchain = { path = "../toolchain" }
