[package]
edition = "2018"
name = "ra_project_model"
version = "0.1.0"
authors = ["rust-analyzer developers"]
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[dependencies]
log = "0.4.8"
rustc-hash = "1.1.0"

cargo_metadata = "0.11.1"

arena = { path = "../arena", version = "0.1.0" }
ra_cfg = { path = "../ra_cfg", version = "0.1.0" }
ra_db = { path = "../ra_db", version = "0.1.0" }
toolchain = { path = "../toolchain", version = "0.1.0" }
ra_proc_macro =  { path = "../ra_proc_macro", version = "0.1.0" }
paths =  { path = "../paths", version = "0.1.0" }
stdx =  { path = "../stdx", version = "0.1.0" }

serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.48"

anyhow = "1.0.26"
