[package]
edition = "2018"
name = "rust-analyzer"
version = "0.1.0"
authors = ["rust-analyzer developers"]
autobins = false
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[[bin]]
name = "rust-analyzer"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.26"
crossbeam-channel = "0.4.0"
env_logger = { version = "0.7.1", default-features = false }
itertools = "0.9.0"
jod-thread = "0.1.0"
log = "0.4.8"
lsp-types = { version = "0.79.0", features = ["proposed"] }
parking_lot = "0.11.0"
pico-args = "0.3.1"
oorandom = "11.1.2"
rustc-hash = "1.1.0"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.48"
threadpool = "1.7.1"
rayon = "1.3.1"
mimalloc = { version = "0.1.19", default-features = false, optional = true }

stdx = { path = "../stdx", version = "0.1.0" }

lsp-server = "0.3.3"
flycheck = { path = "../flycheck", version = "0.1.0" }
ra_ide = { path = "../ra_ide", version = "0.1.0" }
ra_prof = { path = "../ra_prof", version = "0.1.0" }
ra_project_model = { path = "../ra_project_model", version = "0.1.0" }
ra_syntax = { path = "../ra_syntax", version = "0.1.0" }
text_edit = { path = "../text_edit", version = "0.1.0" }
vfs = { path = "../vfs", version = "0.1.0" }
vfs-notify = { path = "../vfs-notify", version = "0.1.0" }
ra_cfg = { path = "../ra_cfg", version = "0.1.0" }
toolchain = { path = "../toolchain", version = "0.1.0" }

# This should only be used in CLI
ra_db = { path = "../ra_db", version = "0.1.0" }
ra_ide_db = { path = "../ra_ide_db", version = "0.1.0" }
ra_ssr = { path = "../ra_ssr", version = "0.1.0" }
hir = { path = "../ra_hir", version = "0.1.0", package = "ra_hir" }
hir_def = { path = "../ra_hir_def", version = "0.1.0", package = "ra_hir_def" }
hir_ty = { path = "../ra_hir_ty", version = "0.1.0", package = "ra_hir_ty" }
ra_proc_macro_srv = { path = "../ra_proc_macro_srv", version = "0.1.0" }

[target.'cfg(windows)'.dependencies]
winapi = "0.3.8"

[dev-dependencies]
expect = { path = "../expect" }
test_utils = { path = "../test_utils" }
mbe = { path = "../mbe" }
tt = { path = "../tt" }
