[package]
name = "paths"
version = "0.1.0"
description = "Wrapper types for relative and absolute paths."
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.57"

[lib]
doctest = false

[dependencies]
# Adding this dep sadly puts a lot of rust-analyzer crates after the
# serde-derive crate. Even though we don't activate the derive feature here,
# someone else in the crate graph certainly does!
# serde = "1"
